k8s/istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: todo-gateway
  namespace: todo-app
spec:
  selector:
    istio: ingressgateway   # gateway par défaut d'Istio
  servers:
  - port: { number: 80, name: http, protocol: HTTP }
    hosts: ["*"]
