k8s/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: todo-vs
  namespace: todo-app
spec:
  hosts:
  - "*"
  gateways:
  - todo-gateway
  http:
  - match:
    - uri:
        prefix: /api/users
    rewrite:
      uri: /users
    route:
    - destination:
        host: users
        port:
          number: 5001
  - match:
    - uri:
        prefix: /api/tasks
    rewrite:
      uri: /tasks
    route:
    - destination:
        host: tasks
        port:
          number: 5002
  - route:
    - destination:
        host: frontend
        port:
          number: 5000
